# MaaStarResonance

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.yaml  .prettierrc  CHANGELOG.md  CHANGLOG.md  CONTACT  README.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  sidebars.js
.github/: cliff.toml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: cn-bug-report.yaml  en-bug-report.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/instructions/: python..instructions.md
.github/workflows/: check.yml  docs.yml  install.yml  mirrorchyan.yml  mirrorchyan_release_note.yml
agent/: app_manage_action.py  fishing_action.py  logger.py  main.py  module_loader.py  my_action.py  my_reco.py  teleport_action.py  utils.py
agent/attach/: __init__.py  common_attach.py
agent/constant/: __init__.py  pages.py
agent/custom/: __init__.py  app_manage_action.py  beat_chen_min.py  cocoon_action.py  common_action.py  fishing_action.py  teleport_action.py  unstable_space.py
agent/fish/: __init__.py
agent/general/: general.py  power_saving_mode.py  season_center.py
agent/key_event/: AndroidKeyEvent.json  __init__.py
agent/map_point/: MapPoint.json  README.md  __init__.py
agent/utils/: __init__.py  fuzzy_utils.py  other_utils.py  param_utils.py  time_utlls.py
assets/: interface.json
docs/: 开发随笔.md
docs/关于/: 关于我们.md
docs/开发者文档/: QuickStart.md  开发随笔.md  待办清单.md  生成Changelog.md
docs/新手上路/: 新手上路.md
scripts/: build_all_platforms.ps1  build_all_platforms.py  config copy.toml  configure.py  download_res.py  download_wheels.py  generate_changelog.py  index.ps1  init_develop_environment.py  install.py  new-release.ps1
src/css/: custom.css
(+57 files in other folders)
