[project]
name = "MaaStarResonance"
version = "0.4.0"
description = "基于MAAFW的星痕共鸣黑盒测试工具"
authors = [
    {name = "233Official",email = "ayusummer233@outlook.com"},
]
license = {text = "LGPL-3.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "maafw>=5.0.3",
    "pip>=25.3",
    "pre-commit>=4.3.0",
    "rapidfuzz>=3.14.3",
    "toml>=0.10.2",
    "tzdata>=2025.2",
]

[tool.setuptools]
packages = ["agent"]
