[project]
name = "MaaStarResonance"
version = "0.5.4"
description = "基于MAAFW的星痕共鸣黑盒测试工具"
authors = [
    {name = "233Official",email = "ayusummer233@outlook.com"},
]
license = {text = "LGPL-3.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "maafw>=5.0.5",
    "pip>=25.3",
    "pre-commit>=4.3.0",
    "rapidfuzz>=3.14.3",
    "toml>=0.10.2",
    "tzdata>=2025.2",
]

[tool.setuptools]
packages = ["agent"]

[tool.isort]
src_paths = ["agent", "scropts"]
force_single_line = false
multi_line_output = 0
include_trailing_comma = false
ensure_newline_before_comments = true
line_length = 120
combine_as_imports = true
lines_between_sections = 1
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY"]